--- a/website/soggle/index.html
+++ b/website/soggle/index.html
@@ -351,9 +351,9 @@
             <br>
             <span>try and get 380+ titles of images of shark right!</span>
             <br>
-            <span>this game is based on the <a href="https://drive3.soggy.cat">soggy drive</a>'s file naming system, which is most commonly used across reposts.</span>
+            <span>this game is based on the <a href="https://drive3.soggy.cat">soggy drive</a>'s file naming system, which is most commonly used across reposts.</span><br>
             <span>you should familiarize yourself with it before even considering playing this..</span>
-            <span class="tiny dark">(it"s a pretty bad concept for a game, but hey, there had to be a soggy cat wordle at some point)</span>
+            <span class="tiny dark">it's a pretty bad concept for a game, but hey, there had to be a soggy cat wordle at some point.. <br> some drive changes might be updated for this game months later</span>
             <br>
             <a class="subtitle">how to play</a>
             <span>if you remember the image's name from the drive, input its filename. <a class="dark">(ex. "pillow<s class="darker">.jpg</s>")</a></span>
@@ -703,7 +703,7 @@
                     updateguesscounter();
                 }
                 input.classList.add("error");
-                input.placeholder = "[𝐋𝐎𝐔𝐃 𝐈𝐍𝐂𝐎𝐑𝐑𝐄𝐂𝐓 𝐁𝐔𝐙𝐙𝐄𝐑]";
+                input.placeholder = "[𝐈𝐍𝐂𝐎𝐑𝐑𝐄𝐂𝐓 𝐁𝐔𝐙𝐙𝐄𝐑]";
                 input.value = "";
                 document.querySelector(".buzzer").pause();
                 document.querySelector(".buzzer").currentTime = 0;
