--- a/website/goog/index.html
+++ b/website/goog/index.html
@@ -73,5 +73,6 @@
 	<input type="file" id="picker" style="display: none" accept="image/*"/>
 
 	<script src="/static/ssoggycat/shared/web/main.js"></script>
+	<script src="/static/ssoggycat/sidemenu/web/sidemenu.js"></script>
 </body>
 </html>
