--- a/website/team/old/index.html
+++ b/website/team/old/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-	
+
 	<meta charset="UTF-8"/>
 	<title>&#65279;</title>
 	<meta property="og:title" content="@ssoggycat">
 	<meta name="description" content="our very sleepy crew">
-	
+
 	<link rel="icon" href="assets/images/soggymask.webp" />
-	
+
 	<meta name="twitter:card" content="summary"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#64DAFF"/>
-	
+
 	<link rel="stylesheet" href="index.css" type="text/css"/>
 	<script src="index.js"></script>
 	<!--<script src="/assets/static/other/cursor-effects.js"></script>-->
-	
+
   </head>
   <body scroll="no" style="overflow: hidden; margin: 0px; padding: 0px;">
 	<!-- script> if (window.location.protocol != "https:") window.location.protocol = "https:" </script> -->
@@ -24,17 +24,17 @@
 	<div class="overlay">
 		<div class="overlay-text" onclick="showContainer()">click me</div>
 	</div>
-	
+
 	<div class="container">
 		<div class="sliding-background"></div>
 	</div>
-	
+
 	<img style="display: none;" id="explode" src="assets/images/boom.awebp">
-	
+
 	<div id="stars"></div>
 	<div id="stars2"></div>
 	<div id="stars3"></div>
-	
+
 	<script type="module">
 		import { emojiCursor } from "/assets/static/other/cursor-effects.js";
 
@@ -43,30 +43,30 @@
 		new emojiCursor({ emoji: ["💦","💧","☔","🛁"," "," "," "," "," "," "," "," "] });
 	</script>
 
-	<div class="slideshow" onclick="window.location.replace('dark')">
+	<div class="slideshow" onclick="window.location.replace('../dark')">
 
 		<div class="image fade">
 			<img width="100px" src="assets/images/slide1.webp">
 		</div>
-		
+
 		<div class="image fade">
 			<img width="100px" src="assets/images/slide2.webp">
 		</div>
-		
+
 		<div class="image fade">
 			<img width="100px" src="assets/images/slide3.webp">
 		</div>
-		
+
 		<div class="image fade">
 			<img width="100px" src="assets/images/slide4.webp">
 		</div>
-		
+
 		<div class="image fade">
 			<img width="100px" src="assets/images/slide5.webp">
 		</div>
-	  
+
 	</div>
-	
+
 	<div class="left">
 		<h1>managers!!</h1>
 		<br>
@@ -112,11 +112,11 @@
 
 		</div>
 	</div>
-	
+
 	<div class="right">
 		<h1>tweetdeck mods!!!</h1>
 		<br>
-		
+
 		<div class="twt">
 
 			<div class="info" onclick="window.open('//twitter.com/soggyenthusiast', 'soggyenthusiast')">
@@ -127,7 +127,7 @@
 				<a class="at">@soggyenthusiast</a>
 			</div>
 			<br>
-			
+
 			<div class="info" onclick="window.open('//twitter.com/coachfancy', 'coachfancy')">
 				<img class="pfp" src="assets/images/fancycoach.jpg">
 				<br>
@@ -136,7 +136,7 @@
 				<a class="at">@CoachFancy</a>
 			</div>
 			<br>
-			
+
 			<div class="info" onclick="window.open('//twitter.com/nullcultured', 'nullcultured')">
 				<img class="pfp" src="assets/images/goob.jpg">
 				<br>
@@ -147,18 +147,18 @@
 
 		</div>
 	</div>
-	
+
 	<div class ="fakemarquee">
-		<p class="fakemarqueetext">"Soggy Cat" is a whimsical term used to describe the comical and often endearing sight of domestic felines that have become wet or damp due to exposure to water, whether through rain, bathing, or other means. While cats are generally known for their aversion to water and meticulous grooming habits, instances of soggy cats can lead to humorous and charming situations. The image of a soggy cat with its fur clinging awkwardly to its body and its usually sleek appearance disrupted by water droplets has become a popular subject in internet memes, social media posts, and humorous artwork. Despite their initial discomfort, many cats display remarkable adaptability, often demonstrating a mix of curiosity and cautious exploration when encountering wet environments. This phenomenon highlights the intriguing and often unpredictable interactions between these enigmatic creatures and the elements of nature. </pre>    
+		<p class="fakemarqueetext">"Soggy Cat" is a whimsical term used to describe the comical and often endearing sight of domestic felines that have become wet or damp due to exposure to water, whether through rain, bathing, or other means. While cats are generally known for their aversion to water and meticulous grooming habits, instances of soggy cats can lead to humorous and charming situations. The image of a soggy cat with its fur clinging awkwardly to its body and its usually sleek appearance disrupted by water droplets has become a popular subject in internet memes, social media posts, and humorous artwork. Despite their initial discomfort, many cats display remarkable adaptability, often demonstrating a mix of curiosity and cautious exploration when encountering wet environments. This phenomenon highlights the intriguing and often unpredictable interactions between these enigmatic creatures and the elements of nature. </pre>
 	</div>
-	
+
 	<!--video class="stars" loop autoplay muted playsinline>
 		<source src="assets/images/stars.webm" type="video/webm">
 		<source src="assets/images/stars.mp4" type="video/mp4">
 	</video-->
 
 	<img class="dance" src="assets/images/stupidlittlecat.awebp">
-	
+
 	<div class="snowflakes" aria-hidden="true">
 		<div class="snowflake">
 			<img width="30px" src="assets/images/soggymask.webp">
