--- a/website/thiscat/index.html
+++ b/website/thiscat/index.html
@@ -1,4 +1,4 @@
-<body bgcolor="#FFFFFF" text="#000000" link="#000000" vlink="#000000" alink="#000000"> 
+<body bgcolor="#FFFFFF" text="#000000" link="#000000" vlink="#000000" alink="#000000">
 
 <div align="center"><font face="Arial,Helvetica,sans-serif" size="7"><strong>EVER DREAM THIS CAT?</strong><br>
 <font size="5">
@@ -15,9 +15,9 @@ every night throughout the world dosens of people dream about this cat.</font></
     <td width="100"></td>
     <td width="200" valign="top"><font face="Arial,Helvetica,sans-serif" size="6">
   <br>
-  <a href="https://soggy.cat/faq/">History</a><br>
+  <a href="https://soggy.cat/faq">History</a><br>
   <a href="https://x.com/ssoggycat/status/1769507758959686107/photo/1">Theories</a><br>
-  <a href="portraits/">Portraits</a><br>	
+  <a href="portraits/">Portraits</a><br>
   <a href="thiscat.png" download>Download</a><br>
   <a href="https://x.com/messages/compose?recipient_id=1517610355999973377">Contact us</a><br>
 <br>
