/team video fixes and stuff🐈
hopefully this stops that one person's computer from crashing :sob:
(plus some stuff with the flashing to hopefully make it less irritating to the eyes)

--- a/website/team/index.html
+++ b/website/team/index.html
@@ -34,7 +34,7 @@
 		</style>
 	</noscript>
 
-	<video playsinline class="cocaine">
+	<video playsinline id="cocaine">
 		<source src="/static/ssoggycat/team/videos/cocaine.mp4" type="video/mp4"/>
 	</video>
 
@@ -175,7 +175,7 @@
 			<a href="old">old</a>
 		</div>
 
-		<video class="bg" preload="auto" autoplay loop muted playsinline disablepictureinpicture disableremoteplayback x-webkit-airplay="deny" width="1">
+		<video id="video-background" preload="auto" loop muted playsinline disablepictureinpicture disableremoteplayback x-webkit-airplay="deny" width="1">
 			<source src="/static/ssoggycat/team/videos/stars.webm" type="video/webm"/>
 			<source src="/static/ssoggycat/team/videos/stars.mp4" type="video/mp4"/>
 		</video>
@@ -191,6 +191,5 @@
 	<a class="song" href="https://www.newgrounds.com/audio/listen/1163253" target="songTarget">♪ milkypossum ~ BUTT3RFLI3S &gt;w&lt;</a>
 
 	<script src="team.js"></script>
-
 </body>
 </html>
