--- a/website/tree/index.html
+++ b/website/tree/index.html
@@ -28,6 +28,7 @@
 		.gradient-background {
 			background: radial-gradient(circle, #212b1e 20%, #111111 100%);
 		}
+		#circlebtn {z-index: 99999999}
 
 		#progresstext {
 			position: fixed; bottom: 20px; left: 50%;
