--- a/website/tree/index.html
+++ b/website/tree/index.html
@@ -4,7 +4,7 @@
 	<title>holly jolly christmas</title>
 	<link rel="icon" href="icon.png">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 	<meta charset="UTF-8">
 
 	<meta name="title" content="the soggy christmas tree">
@@ -134,6 +134,9 @@
 			pointer-events: none; z-index: 1000;
 			transform: translate(-50%, -50%);
 		}
+		.discordloginbutton {transition: background 0.2s, transform 0.1s}
+		.discordloginbutton:active {background: #4752C4 !important}
+		.decoration-tooltip {text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8)}
 
 		.snow {
             position: absolute; overflow: hidden; opacity: 0.05;
