this is very important

--- a/website/index.html
+++ b/website/index.html
@@ -17,6 +17,14 @@
 	<meta name="color-scheme" content="light">
 	<meta name="theme-color" content="#ffcc5f">
 
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="soggy cat">
+	<meta name="twitter:description" content="a picture of a wet cat inside a bathtub.">
+	<meta name="twitter:image" content="https://soggy.cat/static/ssoggycat/shared/images/block1.png">
+	<meta name="twitter:image" content="https://soggy.cat/static/ssoggycat/shared/images/block2.png">
+	<meta name="twitter:image" content="https://soggy.cat/static/ssoggycat/shared/images/block3.png">
+	<meta name="twitter:image" content="https://soggy.cat/static/ssoggycat/shared/images/block4.png">
+
 	<link rel="stylesheet" href="/static/ssoggycat/shared/web/main.css">
 	<link rel="stylesheet" href="/static/ssoggycat/sidemenu/web/sidemenu.css">
 </head>
