--- a/website/index.html
+++ b/website/index.html
@@ -69,6 +69,8 @@
 		</div>
 	</div>
 
+	<a class="thisisnotactuallymalware" href="https://malware.soggy.cat">DOWNLOAD MALWARE</a>
+
 	<button id="circlebtn" type="button" aria-label="Navigation"></button>
 	<span id="player" style="display: none"></span>
 	<input type="file" id="picker" style="display: none" accept="image/*">
